--- a/src/App.scss
+++ b/src/App.scss
@@ -2,32 +2,28 @@
 
 div.App-container {
     @include spacing-lateral();
-    // background-color: blue;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    .grid {
-        // background-color: $wh;
-    }
-
     .content {
         // background-color: $wh;
         position: relative;
-        top: -3rem;
-
-        font-family: $font-secundary, sans-serif; //////////////
+        top: -2rem;
         text-align: center;
 
         h1 {
-            font-weight: 900;
+            font-family: $font-header, $font-main, $font-secundary;
+            font-size: 3.5rem;
+            letter-spacing: -0.5px;
+            // font-weight: 900;
             margin-bottom: 3rem;
         }
 
         p {
             font-size: 2.3rem;
-            font-weight: 400;
+            // font-weight: 400;
             line-height: normal;
         }
     }    
